fixed so all text is always visible

--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ ul {
 
 .main-area {
   margin-top: 5vh;
-  height: 90vh;
+  min-height: 90vh;
   background-color: #060;
   border: 5px solid #003;
   display: flex;
